相册 ·图片集成框架有Glide ·使用XXPermisson权限请求框架 ·优化加载速度 8.28 待完成： ·DCIM全扫描； ·优化加载速度； ·添加手势缩放等操作 ·图片详情信息 ·图片增删更新

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".FileActivity"/>
+        <activity android:name=".SingleImageActivity"
+                android:theme="@style/Theme.Gallery.SingleImage"/>
     </application>
 
 </manifest>
