--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,6 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
-
     <application
             android:allowBackup="true"
             android:icon="@drawable/icon"
@@ -13,6 +12,7 @@
             android:roundIcon="@drawable/icon"
             android:supportsRtl="true"
             android:theme="@style/Theme.Gallery">
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -21,7 +21,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".FileActivity"/>
-        <activity android:name=".SingleImageActivity"
+        <activity
+                android:name=".SingleImageActivity"
                 android:theme="@style/Theme.Gallery.SingleImage"/>
     </application>
 
