--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
             android:label="@string/app_name"
             android:roundIcon="@drawable/icon"
             android:supportsRtl="true"
-            android:theme="@style/Theme.Gallery">
+            android:theme="@style/Theme.Gallery"
+            android:requestLegacyExternalStorage="true">
 
         <activity android:name=".MainActivity">
             <intent-filter>
